--- a/main.css
+++ b/main.css
@@ -206,3 +206,25 @@ input:checked ~ .bubble::after {
   text-decoration: line-through;
   color: var(--grey);
 }
+
+/* Adding responsiveness to the page */
+
+@media only screen and (max-width: 768px) {
+  h3,
+  h4 {
+    margin-left: 30px;
+    font-size: 30px;
+    width: 75%;
+  }
+
+  .todo-list {
+    margin-right: 50px;
+    width: 100%;
+    border-radius: 10px;
+  }
+
+  #content,
+  #addtask {
+    width: 80%;
+  }
+}
